# EzComp

./: .clang-format  .gitignore  .gitmodules  .iflowignore  CMakeLists.txt  Dependency Graph
Examples/EcCompile/Frontend/: 1d_heat_equation.comp  ast.comp  empty.comp
EzCompile/: CMakeLists.txt
EzCompile/Backend/: CMakeLists.txt
EzCompile/Backend/Driver/: BackendDriver.cpp  BackendDriver.h  BackendOptions.h  CMakeLists.txt
EzCompile/Backend/Link/: CMakeLists.txt  Linker.cpp  Linker.h  LinkerOptions.h
EzCompile/Backend/Translate/: CMakeLists.txt  TranslateMLIRToLLVMIR.cpp  TranslateMLIRToLLVMIR.h
EzCompile/Bakend/: CMakeLists.txt
EzCompile/Bakend/Driver/: BakendDriver.cpp  BakendDriver.h  CMakeLists.txt
EzCompile/Bakend/Link/: CMakeLists.txt
EzCompile/Bakend/Translate/: CMakeLists.txt
EzCompile/Fronted/: README.md
EzCompile/Frontend/: CMakeLists.txt  README.md
EzCompile/Frontend/include/: AST.h  DiagnosticBase.h  Lexer.h  OptionTable.h  Options.def  Parser.h  Semantic.h
EzCompile/Frontend/include/Semantic/: DependencyGraph.h  Semantic.h
EzCompile/Frontend/lib/: AST.cpp  Lexer.cpp  OptionTable.cpp  Parser.cpp  Semantic.cpp  Semantics.cpp
EzCompile/Frontend/lib/Semantic/: DependencyGraph.cpp  Semantic.cpp
EzCompile/Midend/: CMakeLists.txt  README.md
EzCompile/Midend/Conversions/: AdjustTimeIndex.cpp  CMakeLists.txt  LowerCompApplyInit.cpp  LowerCompCall.cpp  LowerCompDelta.cpp  LowerCompDim.cpp  LowerCompDirichlet.cpp  LowerCompField.cpp  LowerCompForTime.cpp  LowerCompLoad.cpp  LowerCompPoints.cpp  LowerCompPointsToArith.cpp  LowerCompProblem.cpp  LowerCompSolve.cpp  LowerCompUpdate.cpp
EzCompile/Midend/Dialects/: CMakeLists.txt
EzCompile/Midend/Dialects/Comp/: CMakeLists.txt
EzCompile/Midend/Dialects/Comp/include/: CMakeLists.txt  Comp.h  CompDialect.h  CompDialect.td  CompOps.h  CompOps.td
EzCompile/Midend/Dialects/Comp/lib/: CMakeLists.txt  CompDialect.cpp  CompOps.cpp
EzCompile/Midend/IRGen/: CMakeLists.txt  MLIRGen.cpp  MLIRGen.h
EzCompile/Midend/IRGen/include/: MLIRGen.h
EzCompile/Midend/IRGen/lib/: CMakeLists.txt  MLIRGen.cpp
EzCompile/Midend/Transforms/: CMakeLists.txt  LowerPasses.h  LowerPipelines.cpp  LowerPipelines.h  Passes.h  Pipelines.cpp  Pipelines.h
EzCompile/Midend/Utils/: BuilderUtil.h  LowerUtil.h
EzCompute/: CMakeLists.txt  EzComputeRuntime.manifest.json
EzCompute/IO/: CMakeLists.txt  HDF5.cpp  HDF5.h  HDF5Wrapper.cpp  HDF5Wrapper.h
EzCompute/Timer/: CMakeLists.txt  Timer.cpp
EzResearch/: CMakeLists.txt
EzResearch/Generic/: CMakeLists.txt  OptLoopPeeling.cpp
EzResearch/Generic/BoundaryHoist/: CMakeLists.txt  OptBoundaryHoist.cpp  StorePartition.cpp  StorePartition.h
EzResearch/Parallelize/: CMakeLists.txt  OptLoopParallelize.cpp
EzResearch/Polyhedral/: AffineSystem.cpp  AffineSystem.h  LoopSkewing.cpp  LoopSkewing.h  OptPolyhedral.cpp  PolyhedralInfo.cpp  PolyhedralInfo.h
EzResearch/Polyhedral /: CMakeLists.txt
EzResearch/Tiling/: BuildTilingNest.cpp  BuildTilingNest.h  CMakeLists.txt  OptLoopTiling.cpp  TilingSizeSolve.cpp  TilingSizeSolve.h
EzResearch/Transforms/: CMakeLists.txt  OptPasses.h  OptPipelines.cpp  OptPipelines.h
EzResearch/Utils/: CacheUtil.h  QueryUtil.h
docs/: Backend.md  EzCompute.md  Frontend.md  Midend.md  Test.md  命令指南.md
test/: CMakeLists.txt  lit.cfg.py
test/ASTToMLIR/: 1d_boundary_with_time.test  1d_iter_single.test  2d_boundary_with_pos.test  2d_iter_single.test
test/AffineToSCF/: 1d_boundary_with_time.test  1d_init_no_pos.test  1d_iter_multi.test  1d_iter_single.test  1d_iter_with_shift.test  2d_init_with_pos.test  2d_iter_with_shift.test
test/BaseToLLVM/: 1d_boundary_const.test  1d_boundary_with_time.test  1d_init_with_pos.test  1d_iter_with_shift.test  2d_boundary_with_time.test  2d_iter_with_shift.test
test/CompToBase/: 1d_boundary_const.test  1d_iter_single.test  1d_iter_with_shift.test  2d_boundary_with_pos.test  2d_boundary_with_time.test
test/Frontend/: 1d_iter_multi.test  1d_iter_with_shift.test  2d_init_no_pos.test  2d_init_with_pos.test  2d_iter_multi.test
test/SCFToCF/: 1d_boundary_const.test  1d_boundary_with_time.test  1d_init_no_pos.test  1d_iter_multi.test  2d_init_with_pos.test  2d_iter_multi.test
test/compare/: CMakeLists.txt  compare.py  compare.py.in  compare_config.json
test/compare/2d_advection_diffusion/: 2d_advection_diffusion.comp  reference.cpp
test/compare/2d_biharmonic/: 2d_biharmonic.comp  reference.cpp
test/compare/2d_heat_equation/: 2d_heat_equation.comp  reference.cpp
test/compare/3d_advection_diffusion/: 3d_advection_diffusion.comp  reference.cpp
test/compare/3d_heat_equation/: 3d_heat_equation.comp  reference.cpp
test/integration/: CMakeLists.txt  lit.site.cfg.py.in
test/integration/ASTToMLIR/: 1d_boundary_const.test  1d_init_no_pos.test  1d_init_with_pos.test  1d_iter_multi.test  2d_boundary_with_time.test  2d_iter_multi.test  2d_iter_with_shift.test
test/integration/AffineToSCF/: 1d_boundary_const.test  1d_boundary_with_time.test  1d_init_no_pos.test  1d_init_with_pos.test  1d_iter_multi.test  1d_iter_single.test  1d_iter_with_shift.test  2d_boundary_with_pos.test  2d_boundary_with_time.test  2d_init_no_pos.test  2d_init_with_pos.test  2d_iter_multi.test  2d_iter_single.test  2d_iter_with_shift.test
test/integration/BaseToLLVM/: 1d_boundary_with_time.test  1d_init_no_pos.test  1d_iter_multi.test  1d_iter_single.test  2d_boundary_with_pos.test  2d_boundary_with_time.test  2d_init_no_pos.test  2d_init_with_pos.test  2d_iter_multi.test  2d_iter_single.test  2d_iter_with_shift.test
test/integration/CompToBase/: 1d_boundary_const.test  1d_boundary_with_time.test  1d_init_no_pos.test  1d_init_with_pos.test  1d_iter_multi.test  1d_iter_single.test  1d_iter_with_shift.test  2d_boundary_with_pos.test  2d_boundary_with_time.test  2d_init_no_pos.test  2d_init_with_pos.test  2d_iter_multi.test  2d_iter_single.test  2d_iter_with_shift.test
test/integration/SCFToCF/: 1d_boundary_const.test  1d_boundary_with_time.test  1d_init_no_pos.test  1d_init_with_pos.test  (+10 more)
tools/: CMakeLists.txt  EzComp.cpp
(+5 files in other folders)
